check for tags on arbiter whenever a config is parsed SERVER-3840